--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,7 @@ framework = arduino
 build_flags =
     -D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0xAD
 	-D SERVER=192.168.2.101
+	-D SHOW_HIT=1
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Ethernet@^2.0.2
