--- a/platformio.ini
+++ b/platformio.ini
@@ -32,10 +32,10 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+upload_port=COM3
 build_flags =
     -D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0xAD
-	-D SERVER=192.168.2.101
-	-D SHOW_HIT=1
+	-D SERVER=192,168,2,100
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Ethernet@^2.0.2
