--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	arduino-libraries/Ethernet@^2.0.2
 	electroniccats/MPU6050@^1.4.4
 	adafruit/Adafruit NeoPixel@^1.15.1
+	tremaru/iarduino_OLED_txt@^1.2.3
 
 [env:nano]
 platform = atmelavr
@@ -27,17 +28,21 @@ lib_deps =
 	arduino-libraries/Ethernet@^2.0.2
 	electroniccats/MPU6050@^1.4.4
 	adafruit/Adafruit NeoPixel@^1.15.1
+	tremaru/iarduino_OLED@^1.2.3
+	tremaru/iarduino_OLED_txt@^1.2.3
 
 [env:mega]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-upload_port=COM3
-build_flags =
-    -D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0xAD
+build_flags = 
+	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0xAB
 	-D SERVER=192,168,2,100
+	-D CLIENT_ID=acn1
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Ethernet@^2.0.2
 	electroniccats/MPU6050@^1.4.4
 	adafruit/Adafruit NeoPixel@^1.15.1
+	tremaru/iarduino_OLED@^1.2.3
+	tremaru/iarduino_OLED_txt@^1.2.3
