--- a/platformio.ini
+++ b/platformio.ini
@@ -35,10 +35,11 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+upload_port = COM3
 build_flags = 
-	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0xAB
+	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x14
 	-D SERVER=192,168,2,100
-	-D CLIENT_ID=acn1
+	-D CLIENT_ID=s5c4
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Ethernet@^2.0.2
