--- a/platformio.ini
+++ b/platformio.ini
@@ -35,15 +35,13 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-upload_port = COM3
+; upload_port = COM3
 build_flags = 
-	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x14
-	-D SERVER=192,168,2,100
-	-D CLIENT_ID=s5c4
+	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x16
+	-D SERVER=192,168,1,100
+	-D CLIENT_ID=s5c6test
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Ethernet@^2.0.2
 	electroniccats/MPU6050@^1.4.4
 	adafruit/Adafruit NeoPixel@^1.15.1
-	tremaru/iarduino_OLED@^1.2.3
-	tremaru/iarduino_OLED_txt@^1.2.3
