--- a/platformio.ini
+++ b/platformio.ini
@@ -37,9 +37,9 @@ board = megaatmega2560
 framework = arduino
 ; upload_port = COM3
 build_flags = 
-	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x16
-	-D SERVER=192,168,1,100
-	-D CLIENT_ID=s5c6test
+	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x11
+	-D SERVER=192,168,5,100
+	-D CLIENT_ID=krs
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Ethernet@^2.0.2
