--- a/platformio.ini
+++ b/platformio.ini
@@ -35,11 +35,306 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-; upload_port = COM3
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller1]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
 build_flags = 
-	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x11
-	-D SERVER=192,168,5,100
-	-D CLIENT_ID=krs
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x11
+	-D CONTROLLER_IP=192,168,2,111
+	-D CONTROLLER_ID=1
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller2]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x12
+	-D CONTROLLER_IP=192,168,2,112
+	-D CONTROLLER_ID=2
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller3]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x13
+	-D CONTROLLER_IP=192,168,2,113
+	-D CONTROLLER_ID=3
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller4]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x14
+	-D CONTROLLER_IP=192,168,2,114
+	-D CONTROLLER_ID=4
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller5]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x15
+	-D CONTROLLER_IP=192,168,2,115
+	-D CONTROLLER_ID=5
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller6]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x16
+	-D CONTROLLER_IP=192,168,2,116
+	-D CONTROLLER_ID=6
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller7]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x17
+	-D CONTROLLER_IP=192,168,2,117
+	-D CONTROLLER_ID=7
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller8]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x18
+	-D CONTROLLER_IP=192,168,2,118
+	-D CONTROLLER_ID=8
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller9]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x19
+	-D CONTROLLER_IP=192,168,2,119
+	-D CONTROLLER_ID=9
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller10]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1A
+	-D CONTROLLER_IP=192,168,2,120
+	-D CONTROLLER_ID=10
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller11]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1B
+	-D CONTROLLER_IP=192,168,2,121
+	-D CONTROLLER_ID=11
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller12]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1C
+	-D CONTROLLER_IP=192,168,2,122
+	-D CONTROLLER_ID=12
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller13]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1D
+	-D CONTROLLER_IP=192,168,2,123
+	-D CONTROLLER_ID=13
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller14]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1E
+	-D CONTROLLER_IP=192,168,2,124
+	-D CONTROLLER_ID=14
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller15]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1F
+	-D CONTROLLER_IP=192,168,2,125
+	-D CONTROLLER_ID=15
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller16]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x20
+	-D CONTROLLER_IP=192,168,2,126
+	-D CONTROLLER_ID=16
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller17]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x21
+	-D CONTROLLER_IP=192,168,2,127
+	-D CONTROLLER_ID=17
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller18]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x22
+	-D CONTROLLER_IP=192,168,2,128
+	-D CONTROLLER_ID=18
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller19]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x23
+	-D CONTROLLER_IP=192,168,2,129
+	-D CONTROLLER_ID=19
+	-D SERVER_IP=192,168,2,100
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Ethernet@^2.0.2
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller20]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_flags = 
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x24
+	-D CONTROLLER_IP=192,168,2,130
+	-D CONTROLLER_ID=20
+	-D SERVER_IP=192,168,2,100
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Ethernet@^2.0.2
