--- a/platformio.ini
+++ b/platformio.ini
@@ -8,40 +8,148 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
-framework = arduino
-lib_deps = 
-	knolleary/PubSubClient@^2.8
-	arduino-libraries/Ethernet@^2.0.2
-	electroniccats/MPU6050@^1.4.4
-	adafruit/Adafruit NeoPixel@^1.15.1
-	tremaru/iarduino_OLED_txt@^1.2.3
-
-[env:nano]
-platform = atmelavr
-board = nanoatmega328new
-framework = arduino
-lib_deps = 
-	knolleary/PubSubClient@^2.8
-	arduino-libraries/Ethernet@^2.0.2
-	electroniccats/MPU6050@^1.4.4
-	adafruit/Adafruit NeoPixel@^1.15.1
-	tremaru/iarduino_OLED@^1.2.3
-	tremaru/iarduino_OLED_txt@^1.2.3
-
-[env:mega]
+[env:controller_base]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-; upload_port = COM3
-build_flags = 
-	-D MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x11
-	-D SERVER=192,168,5,100
-	-D CLIENT_ID=krs
-lib_deps = 
+lib_deps =
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Ethernet@^2.0.2
 	electroniccats/MPU6050@^1.4.4
 	adafruit/Adafruit NeoPixel@^1.15.1
+
+[env:controller1]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x11
+	-D CONTROLLER_IP=192,168,2,131
+	-D CONTROLLER_ID=1
+	-D SERVER_IP=192,168,2,100
+
+[env:controller2]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x12
+	-D CONTROLLER_IP=192,168,2,132
+	-D CONTROLLER_ID=2
+	-D SERVER_IP=192,168,2,100
+
+[env:controller3]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x13
+	-D CONTROLLER_IP=192,168,2,133
+	-D CONTROLLER_ID=3
+	-D SERVER_IP=192,168,2,100
+
+[env:controller4]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x14
+	-D CONTROLLER_IP=192,168,2,134
+	-D CONTROLLER_ID=4
+	-D SERVER_IP=192,168,2,100
+
+[env:controller5]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x15
+	-D CONTROLLER_IP=192,168,2,135
+	-D CONTROLLER_ID=5
+	-D SERVER_IP=192,168,2,100
+
+[env:controller6]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x16
+	-D CONTROLLER_IP=192,168,2,136
+	-D CONTROLLER_ID=6
+	-D SERVER_IP=192,168,2,100
+
+[env:controller7]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x17
+	-D CONTROLLER_IP=192,168,2,137
+	-D CONTROLLER_ID=7
+	-D SERVER_IP=192,168,2,100
+
+[env:controller8]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x18
+	-D CONTROLLER_IP=192,168,2,138
+	-D CONTROLLER_ID=8
+	-D SERVER_IP=192,168,2,100
+
+[env:controller9]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x19
+	-D CONTROLLER_IP=192,168,2,139
+	-D CONTROLLER_ID=9
+	-D SERVER_IP=192,168,2,100
+
+[env:controller10]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1A
+	-D CONTROLLER_IP=192,168,2,140
+	-D CONTROLLER_ID=10
+	-D SERVER_IP=192,168,2,100
+
+[env:controller11]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1B
+	-D CONTROLLER_IP=192,168,2,141
+	-D CONTROLLER_ID=11
+	-D SERVER_IP=192,168,2,100
+
+[env:controller12]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1C
+	-D CONTROLLER_IP=192,168,2,142
+	-D CONTROLLER_ID=12
+	-D SERVER_IP=192,168,2,100
+
+[env:controller13]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1D
+	-D CONTROLLER_IP=192,168,2,143
+	-D CONTROLLER_ID=13
+	-D SERVER_IP=192,168,2,100
+
+[env:controller14]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1E
+	-D CONTROLLER_IP=192,168,2,144
+	-D CONTROLLER_ID=14
+	-D SERVER_IP=192,168,2,100
+
+[env:controller15]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x1F
+	-D CONTROLLER_IP=192,168,2,145
+	-D CONTROLLER_ID=15
+	-D SERVER_IP=192,168,2,100
+
+[env:controller16]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x20
+	-D CONTROLLER_IP=192,168,2,146
+	-D CONTROLLER_ID=16
+	-D SERVER_IP=192,168,2,100
+
+[env:controller17]
+extends = env:controller_base
+build_flags =
+	-D CONTROLLER_MAC=0xDE,0xAD,0xBE,0xEF,0xFE,0x21
+	-D CONTROLLER_IP=192,168,2,147
+	-D CONTROLLER_ID=17
+	-D SERVER_IP=192,168,2,100
